k8s/bank.deployment.yaml
# bank DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank
  labels:
    tier: bank
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      tier: bank
  template:
    metadata:
      labels:
        tier: bank
    spec:
      containers:
        - name: bank
          image: docker.io/antoineleguillou/cash-manager_bank:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 300m
              memory: 320Mi
          ports:
            - containerPort: 4000
      restartPolicy: Always
---
# bank SERVICES
# apiVersion: v1
# kind: Service
# metadata:
#   name: bank
# spec:
#   selector:
#     tier: bank
#   type: ClusterIP
#   ports:
#     - port: 4000
#       targetPort: 4000
#       name: http
---
apiVersion: v1
kind: Service
metadata:
  name: bank
  namespace: default
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    tier: bank
  type: NodePort
---
