k8s/server.deployment.yaml
# server DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    tier: server
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      tier: server
  template:
    metadata:
      labels:
        tier: server
    spec:
      containers:
        - name: server
          image: docker.io/antoineleguillou/cash-manager_server:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 300m
              memory: 320Mi
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
# server SERVICES
# apiVersion: v1
# kind: Service
# metadata:
#   name: server
# spec:
#   selector:
#     tier: server
#   type: ClusterIP
#   ports:
#     - port: 3000
#       targetPort: 3000
#       name: http
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: default
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    tier: server
  type: NodePort
---
