k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cashmanager-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "cashmanager-static-ip"
spec:
  rules:
    - http:
        paths:
          - path: /cashmanager/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 3000
          - path: /bank/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bank
                port:
                  number: 4000
